flux/oauth2-proxy/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
  annotations:
    external-dns.kubernetes.io/controller: ignore
spec:
  hostnames:
  - "prometheus.int.beansnet.net"
  - "kiali.int.beansnet.net"
  - "package-tracker.beansnet.net"
  - "grafana.int.beansnet.net"
  - "otterwiki.beansnet.net"
  - "ow.beansnet.net"
  - "wp.beansnet.net"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal-gateway
    namespace: istio-system
    sectionName: https
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: public-gateway
    namespace: istio-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: oauth2-proxy
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /oauth2
